--- a/.github/actions/gh-pages-publish/action.yml
+++ b/.github/actions/gh-pages-publish/action.yml
@@ -26,18 +26,13 @@ runs:
               VERSION=$(git describe --abbrev=0 --tags 2>/dev/null || echo "dev")
 
               git fetch origin gh-pages
+              git checkout gh-pages
+              git rm -rf docs
+              rm -rf docs
+              mv docs0 docs
               ls -al
+              ls -al docs/
               git status
-
-              # if git show-ref --quiet refs/heads/gh-pages; then
-              #   git checkout gh-pages
-              # else
-              #   git checkout --orphan gh-pages
-              #   git rm -rf .
-              # fi
-
-              # rm -rf docs
-              # mv docs0 docs
 
               # git add .
               # git commit -m "Release $VERSION" || echo "No changes"
