--- a/.github/actions/dockerhub-publish/action.yml
+++ b/.github/actions/dockerhub-publish/action.yml
@@ -16,8 +16,8 @@ runs:
     steps:
         - uses: docker/login-action@v3
           with:
-              username: ${{ secrets.DOCKER_USERNAME }}
-              password: ${{ secrets.DOCKER_PASSWORD }}
+              username: ${{ env.DOCKER_USERNAME }}
+              password: ${{ env.DOCKER_PASSWORD }}
 
         - uses: docker/setup-qemu-action@v3
 
