--- a/.github/actions/dockerhub-publish/action.yml
+++ b/.github/actions/dockerhub-publish/action.yml
@@ -14,21 +14,21 @@ inputs:
 runs:
     using: composite
     steps:
-        # - uses: docker/login-action@v3
-        #   with:
-        #       username: ${{ env.DOCKER_USERNAME }}
-        #       password: ${{ env.DOCKER_PASSWORD }}
+        - uses: docker/login-action@v3
+          with:
+              username: ${{ env.DOCKER_USERNAME }}
+              password: ${{ env.DOCKER_PASSWORD }}
 
-        # - uses: docker/setup-qemu-action@v3
+        - uses: docker/setup-qemu-action@v3
 
-        # - uses: docker/setup-buildx-action@v3
-        #   with:
-        #       platforms: ${{ inputs.platforms }}
+        - uses: docker/setup-buildx-action@v3
+          with:
+              platforms: ${{ inputs.platforms }}
 
-        # - uses: docker/build-push-action@v6
-        #   with:
-        #       file: docker/Dockerfile
-        #       context: .
-        #       push: true
-        #       platforms: ${{ inputs.platforms }}
-        #       tags: ${{ inputs.tags }}
+        - uses: docker/build-push-action@v6
+          with:
+              file: docker/Dockerfile
+              context: .
+              push: true
+              platforms: ${{ inputs.platforms }}
+              tags: ${{ inputs.tags }}
