--- a/.github/actions/dockerhub-publish/action.yml
+++ b/.github/actions/dockerhub-publish/action.yml
@@ -14,6 +14,10 @@ inputs:
 runs:
     using: composite
     steps:
+        - run: |
+              ls .
+              ls docker/
+
         - uses: docker/login-action@v3
           with:
               username: ${{ env.DOCKER_USERNAME }}
