dockerhub-publish status tracing 2

--- a/.github/actions/dockerhub-publish/action.yml
+++ b/.github/actions/dockerhub-publish/action.yml
@@ -14,7 +14,8 @@ inputs:
 runs:
     using: composite
     steps:
-        - run: |
+        - shell: bash
+          run: |
               ls .
               ls docker/
 
