--- a/.github/workflows/dioxus-qa.yml
+++ b/.github/workflows/dioxus-qa.yml
@@ -73,30 +73,7 @@ jobs:
               with:
                   toolchain: ${{ inputs.toolchain }}
 
-            - name: Add Android targets
-              run: rustup target add aarch64-linux-android armv7-linux-androideabi i686-linux-android x86_64-linux-android
-
-            - name: Set up Java
-              uses: actions/setup-java@v4
-              with:
-                  distribution: temurin
-                  java-version: "17"
-
-            - name: Set up Android SDK and NDK
-              run: |
-                  wget https://dl.google.com/android/repository/commandlinetools-linux-13114758_latest.zip
-                  unzip commandlinetools-linux-13114758_latest.zip
-                  mkdir -p android-sdk/cmdline-tools
-                  mv cmdline-tools android-sdk/cmdline-tools/latest
-                  export ANDROID_HOME=$PWD/android-sdk
-                  echo "ANDROID_HOME=$ANDROID_HOME" >> $GITHUB_ENV
-                  yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses
-                  $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager \
-                    "platform-tools" \
-                    "platforms;android-36" \
-                    "build-tools;36.0.0" \
-                    "ndk;26.1.10909125"
-                  echo "ANDROID_NDK_HOME=$ANDROID_HOME/ndk/26.1.10909125" >> $GITHUB_ENV
+            - uses: nigeleke/github/.github/actions/dioxus-android-setup@main
 
             - uses: nigeleke/github/.github/actions/rust-qa@main
 
