Sanitized setup android & ndk

--- a/.github/actions/dioxus-android-setup/action.yml
+++ b/.github/actions/dioxus-android-setup/action.yml
@@ -24,26 +24,16 @@ runs:
         - name: Set up Android SDK and NDK
           shell: bash
           run: |
-              set -euo pipefail
-
-              SDK_ROOT="$PWD/android-sdk"
-              CMDLINE_ZIP="commandlinetools-linux-13114758_latest.zip"
-
-              wget -q https://dl.google.com/android/repository/$CMDLINE_ZIP
-              unzip -q $CMDLINE_ZIP
-
-              mkdir -p "$SDK_ROOT/cmdline-tools"
-              mv cmdline-tools "$SDK_ROOT/cmdline-tools/latest"
-
-              echo "ANDROID_HOME=$SDK_ROOT" >> "$GITHUB_ENV"
-              echo "ANDROID_SDK_ROOT=$SDK_ROOT" >> "$GITHUB_ENV"
-
-              yes | "$SDK_ROOT/cmdline-tools/latest/bin/sdkmanager" --licenses
-
-              "$SDK_ROOT/cmdline-tools/latest/bin/sdkmanager" \
+              wget https://dl.google.com/android/repository/commandlinetools-linux-13114758_latest.zip
+              unzip commandlinetools-linux-13114758_latest.zip
+              mkdir -p android-sdk/cmdline-tools
+              mv cmdline-tools android-sdk/cmdline-tools/latest
+              export ANDROID_HOME=$PWD/android-sdk
+              echo "ANDROID_HOME=$ANDROID_HOME" >> $GITHUB_ENV
+              yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses
+              $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager \
                 "platform-tools" \
                 "platforms;android-36" \
                 "build-tools;36.0.0" \
                 "ndk;26.1.10909125"
-
-              echo "ANDROID_NDK_HOME=$SDK_ROOT/ndk/26.1.10909125" >> "$GITHUB_ENV"
+              echo "ANDROID_NDK_HOME=$ANDROID_HOME/ndk/26.1.10909125" >> $GITHUB_ENV
