--- a/.github/actions/dioxus-android-setup/action.yml
+++ b/.github/actions/dioxus-android-setup/action.yml
@@ -28,10 +28,17 @@ runs:
               unzip commandlinetools-linux-13114758_latest.zip
               mkdir -p android-sdk/cmdline-tools
               mv cmdline-tools android-sdk/cmdline-tools/latest
+
               export ANDROID_HOME=$PWD/android-sdk
+              export ANDROID_SDK_ROOT="$ANDROID_HOME"
+              export PATH="$ANDROID_HOME/cmdline-tools/latest/bin:$PATH"
+
               echo "ANDROID_HOME=$ANDROID_HOME" >> $GITHUB_ENV
-              yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses
-              $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager \
+              echo "ANDROID_SDK_ROOT=$ANDROID_HOME" >> $GITHUB_ENV
+              echo "PATH=$PATH" >> $GITHUB_ENV
+
+              yes | sdkmanager --licenses
+              yes | sdkmanager \
                 "platform-tools" \
                 "platforms;android-36" \
                 "build-tools;36.0.0" \
