--- a/.github/actions/dioxus-android-setup/action.yml
+++ b/.github/actions/dioxus-android-setup/action.yml
@@ -26,21 +26,22 @@ runs:
           run: |
               wget https://dl.google.com/android/repository/commandlinetools-linux-13114758_latest.zip
               unzip commandlinetools-linux-13114758_latest.zip
-              mkdir -p android-sdk/cmdline-tools
-              mv cmdline-tools android-sdk/cmdline-tools/latest
+              exit -1;
+              # mkdir -p android-sdk/cmdline-tools
+              # mv cmdline-tools android-sdk/cmdline-tools/latest
 
-              export ANDROID_HOME=$PWD/android-sdk
-              export ANDROID_SDK_ROOT="$ANDROID_HOME"
-              export PATH="$ANDROID_HOME/cmdline-tools/latest/bin:$PATH"
+              # export ANDROID_HOME=$PWD/android-sdk
+              # export ANDROID_SDK_ROOT="$ANDROID_HOME"
+              # export PATH="$ANDROID_HOME/cmdline-tools/latest/bin:$PATH"
 
-              echo "ANDROID_HOME=$ANDROID_HOME" >> $GITHUB_ENV
-              echo "ANDROID_SDK_ROOT=$ANDROID_HOME" >> $GITHUB_ENV
-              echo "PATH=$PATH" >> $GITHUB_ENV
+              # echo "ANDROID_HOME=$ANDROID_HOME" >> $GITHUB_ENV
+              # echo "ANDROID_SDK_ROOT=$ANDROID_HOME" >> $GITHUB_ENV
+              # echo "PATH=$PATH" >> $GITHUB_ENV
 
-              yes | sdkmanager --licenses
-              yes | sdkmanager \
-                "platform-tools" \
-                "platforms;android-36" \
-                "build-tools;36.0.0" \
-                "ndk;26.1.10909125"
-              echo "ANDROID_NDK_HOME=$ANDROID_HOME/ndk/26.1.10909125" >> $GITHUB_ENV
+              # yes | sdkmanager --licenses
+              # yes | sdkmanager \
+              #   "platform-tools" \
+              #   "platforms;android-36" \
+              #   "build-tools;36.0.0" \
+              #   "ndk;26.1.10909125"
+              # echo "ANDROID_NDK_HOME=$ANDROID_HOME/ndk/26.1.10909125" >> $GITHUB_ENV
