dioxus-android-setup tracing 2

--- a/.github/actions/dioxus-android-setup/action.yml
+++ b/.github/actions/dioxus-android-setup/action.yml
@@ -26,17 +26,19 @@ runs:
           run: |
               wget https://dl.google.com/android/repository/commandlinetools-linux-13114758_latest.zip
               unzip commandlinetools-linux-13114758_latest.zip
+              mkdir -p android-sdk/cmdline-tools
+              ls -al .
+              mv cmdline-tools android-sdk/cmdline-tools/latest
+              ls -al android-sdk/cmdline-tools/latest
+
+              export ANDROID_HOME=$PWD/android-sdk
+              export ANDROID_SDK_ROOT="$ANDROID_HOME"
+              export PATH="$ANDROID_HOME/cmdline-tools/latest/bin:$PATH"
+
+              echo "ANDROID_HOME=$ANDROID_HOME" >> $GITHUB_ENV
+              echo "ANDROID_SDK_ROOT=$ANDROID_HOME" >> $GITHUB_ENV
+              echo "PATH=$PATH" >> $GITHUB_ENV
               exit -1;
-              # mkdir -p android-sdk/cmdline-tools
-              # mv cmdline-tools android-sdk/cmdline-tools/latest
-
-              # export ANDROID_HOME=$PWD/android-sdk
-              # export ANDROID_SDK_ROOT="$ANDROID_HOME"
-              # export PATH="$ANDROID_HOME/cmdline-tools/latest/bin:$PATH"
-
-              # echo "ANDROID_HOME=$ANDROID_HOME" >> $GITHUB_ENV
-              # echo "ANDROID_SDK_ROOT=$ANDROID_HOME" >> $GITHUB_ENV
-              # echo "PATH=$PATH" >> $GITHUB_ENV
 
               # yes | sdkmanager --licenses
               # yes | sdkmanager \
