--- a/.github/actions/dioxus-android-setup/action.yml
+++ b/.github/actions/dioxus-android-setup/action.yml
@@ -38,9 +38,9 @@ runs:
               echo "ANDROID_HOME=$ANDROID_HOME" >> $GITHUB_ENV
               echo "ANDROID_SDK_ROOT=$ANDROID_HOME" >> $GITHUB_ENV
               echo "PATH=$PATH" >> $GITHUB_ENV
-              exit -1;
 
-              # yes | sdkmanager --licenses
+              yes | sdkmanager --licenses
+              exit -1;
               # yes | sdkmanager \
               #   "platform-tools" \
               #   "platforms;android-36" \
