--- a/.github/actions/dioxus-android-setup/action.yml
+++ b/.github/actions/dioxus-android-setup/action.yml
@@ -39,11 +39,10 @@ runs:
               echo "ANDROID_SDK_ROOT=$ANDROID_HOME" >> $GITHUB_ENV
               echo "PATH=$PATH" >> $GITHUB_ENV
 
-              yes | sdkmanager --licenses
-              exit -1;
-              # yes | sdkmanager \
-              #   "platform-tools" \
-              #   "platforms;android-36" \
-              #   "build-tools;36.0.0" \
-              #   "ndk;26.1.10909125"
-              # echo "ANDROID_NDK_HOME=$ANDROID_HOME/ndk/26.1.10909125" >> $GITHUB_ENV
+              printf 'y\n%.0s' {1..20} | sdkmanager --licenses > /dev/null
+              printf 'y\n%.0s' {1..20} | sdkmanager \
+                "platform-tools" \
+                "platforms;android-36" \
+                "build-tools;36.0.0" \
+                "ndk;26.1.10909125"
+              echo "ANDROID_NDK_HOME=$ANDROID_HOME/ndk/26.1.10909125" >> $GITHUB_ENV
