--- a/.github/workflows/rust-publish.yml
+++ b/.github/workflows/rust-publish.yml
@@ -18,6 +18,7 @@ jobs:
             - uses: actions/checkout@v6
               with:
                   fetch-depth: 0
+            - uses: nigeleke/github/.github/actions/os-prerequisites@main
             - uses: nigeleke/github/.github/actions/rust-setup@main
             - uses: nigeleke/github/.github/actions/rust-docs@main
             - uses: nigeleke/github/.github/actions/rust-llvm-cov@main
