--- a/.github/workflows/dioxus-bundle.yml
+++ b/.github/workflows/dioxus-bundle.yml
@@ -102,7 +102,23 @@ jobs:
             - name: Collect APK
               run: |
                   mkdir -p artifacts
-                  cp dist/bundle/mobile/*.apk artifacts/ 2>/dev/null || true
+                  cp target/dx/*/release/android/app/app/build/outputs/bundle/release/*.aab artifacts/
+                  mapfile -t AABS < <(find artifacts -type f -name '*.aab')
+
+                  if [ "${#AABS[@]}" -ne 1 ]; then
+                    echo "Expected exactly one .aab, found ${#AABS[@]}"
+                    printf '%s\n' "${AABS[@]}"
+                    exit 1
+                  fi
+
+                  AAB="${AABS[0]}"
+                  AAB_BASENAME=$(basename "$AAB")
+                  AAB_STEM="${AAB_BASENAME%.aab}"
+
+                  bundletool build-apks \
+                    --bundle="$AAB" \
+                    --output="$AAB_STEM".apks \
+                    --mode=universal
 
             - name: Upload artifact
               uses: actions/upload-artifact@v4
