Make use-cross bool in rust-release-desktop

--- a/.github/workflows/rust-release-desktop.yml
+++ b/.github/workflows/rust-release-desktop.yml
@@ -12,7 +12,7 @@ on:
                 description: "Use cross instead of cargo"
                 required: false
                 type: boolean
-                default: "true"
+                default: true
 
 jobs:
     build:
@@ -43,7 +43,7 @@ jobs:
                   set -euo pipefail
 
                   BUILDER="cargo"
-                  if [[ "${{ inputs.use-cross }}" == "true" ]]; then
+                  if [[ "${{ inputs.use-cross }}" == true ]]; then
                     BUILDER="cross"
                   fi
 
