--- a/.github/workflows/rust-release-desktop.yml
+++ b/.github/workflows/rust-release-desktop.yml
@@ -21,7 +21,7 @@ jobs:
                     - os: windows-latest
                       target: x86_64-pc-windows-msvc
                     - os: macos-latest
-                      target: x86_64-apple-darwin
+                      target: aarch64-apple-darwin
 
         steps:
             - uses: actions/checkout@v6
