Add os & target to released file 2

--- a/.github/workflows/rust-release-desktop.yml
+++ b/.github/workflows/rust-release-desktop.yml
@@ -90,12 +90,8 @@ jobs:
               with:
                   name: binaries-${{ matrix.target }}
                   path: |
-                      target/${{ matrix.target }}/release/*
-                      !target/${{ matrix.target }}/release/*.d
-                      !target/${{ matrix.target }}/release/*.rlib
-                      !target/${{ matrix.target }}/release/*.a
-                      !target/${{ matrix.target }}/release/build/**
-                      !target/${{ matrix.target }}/release/deps/**
+                      *-${{ matrix.os }}*
+                      *.pdb
                   if-no-files-found: error
                   retention-days: 1
 
@@ -113,10 +109,6 @@ jobs:
               with:
                   path: binaries/
                   pattern: binaries-*
-                  merge-multiple: true
-
-            - name: List downloaded files (debug)
-              run: ls -R binaries/
 
             - name: Create or update GitHub Release
               uses: softprops/action-gh-release@v2
@@ -125,5 +117,6 @@ jobs:
                   name: Release ${{ github.ref_name }}
                   generate_release_notes: true
                   files: binaries/**/*
+                  fail_on_unmatched_files: true
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
