--- a/.github/workflows/rust-release-desktop.yml
+++ b/.github/workflows/rust-release-desktop.yml
@@ -112,8 +112,10 @@ jobs:
               with:
                   name: binaries-${{ matrix.target }}
                   path: |
-                      *-${{ matrix.os }}*
-                      *.pdb
+                      *-linux-latest
+                      *-macos-latest
+                      *-windows-latest*
+                      *-windows-latest.pdb
                   if-no-files-found: error
                   retention-days: 1
 
