Add tracing in rust docs; looking for Cargo.toml changes

--- a/.github/actions/rust-docs/action.yml
+++ b/.github/actions/rust-docs/action.yml
@@ -6,4 +6,10 @@ runs:
     steps:
         - name: Check docs
           shell: bash
-          run: cargo doc --workspace --no-deps --all-features
+          run: |
+              echo "***RUST DOCS MAIN pre"
+              git status
+              cargo doc --workspace --no-deps --all-features
+              echo "***RUST DOCS MAIN post"
+              git status
+              git diff
